--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wisam International</title>
+    <title>Wisam Alami</title>
 <link rel="icon" href="./src/assets/i.png" type="image/png" />
 
     <link rel = "stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
